display grid child elements alignment corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,19 +344,18 @@ p{
   justify-content: center;
 }
 .display-grid .card{
-  width: 25%;
+  max-width: 25%;
   margin: 10px;
 }
 .display-grid .card figure img{
   width: 100%
 }
 .display-grid .card:nth-child(1){
-  width: 43%;
+  max-width: 43%;
   margin: 10px;
-  background-color: #fff;
 }
 .display-grid .card:nth-child(3n+4){
-  width: 43%;
+  max-width: 43%;
   margin: 10px;
 }
 /* ---------------------connect with us ends here------------------ */
